Email templates issues Done

--- a/templates/core/email_activate.html
+++ b/templates/core/email_activate.html
@@ -60,12 +60,11 @@
             }
 
             .activation-section {
-                display: flex;
-                flex-direction: column;
                 margin: 30px 0 40px;
             }
 
             .btn-primary {
+                width: 100%;
                 background: #ff9933;
                 padding: 10px;
                 border: 0px;
@@ -101,7 +100,7 @@
                 </p>
 
                 <section class="activation-section">
-                    <span>Click the button to activate the account.</span>
+                    <p>Click the button to activate the account.</p>
                     <button class="btn-primary">
                         <a href="{{content.link}}">Click here</a>
                     </button>
