--- a/templates/core/reset_forgot_password.html
+++ b/templates/core/reset_forgot_password.html
@@ -60,12 +60,11 @@
             }
 
             .activation-section {
-                display: flex;
-                flex-direction: column;
                 margin: 30px 0 40px;
             }
 
             .btn-primary {
+                width: 100%;
                 background: #ff9933;
                 padding: 10px;
                 border: 0px;
@@ -83,7 +82,7 @@
                 box-shadow: 0px 0px 3px #4e4e4e;
             }
         </style>
-        
+
     </head>
     <body>
         <div class="wrapper">
@@ -101,7 +100,7 @@
                 </p>
 
                 <section class="activation-section">
-                    <span>Click the button to reset the account password.</span>
+                    <p>Click the button to reset the account password.</p>
                     <button class="btn-primary">
                         <a href="{{content.link}}">Click here</a>
                     </button>
