Email templates updated

--- a/templates/core/reset_forgot_password.html
+++ b/templates/core/reset_forgot_password.html
@@ -72,14 +72,15 @@
                 border-radius: 0px;
                 margin: 10px 0;
             }
-
+            
             .btn-primary > a {
                 color: inherit;
             }
-
+            
             .btn-primary:hover {
                 background: #fa8e22;
                 box-shadow: 0px 0px 3px #4e4e4e;
+                cursor: pointer;
             }
         </style>
 
@@ -101,9 +102,7 @@
 
                 <section class="activation-section">
                     <p>Click the button to reset the account password.</p>
-                    <button class="btn-primary">
-                        <a href="{{content.link}}">Click here</a>
-                    </button>
+                        <a href="{{content.link}}"><button class="btn-primary cursor-pointer">Click here</button></a>
                 </section>
 
                 <p>
